fix: hide nav bar links on small screens to prevent overflow

--- a/src/stylesheets/navbars.css
+++ b/src/stylesheets/navbars.css
@@ -3,13 +3,13 @@
     flex-direction: row;
 
     padding: 1em 2em;
+    max-width: 100%;
 
     background-color: var(--main-dark);
-    
 }
 
 .navbar h1{
-    margin: 0 5em 0 0;
+    margin: 0 7rem 0 0;
     font-family: 'Oxygen', sans-serif;
     font-size: 1.8em;
 
@@ -23,7 +23,7 @@
 }
 
 .navbar li{
-    margin: 0 10em 0 0;
+    margin: 0 10rem 0 0;
 
     font-family: 'Puritan', sans-serif;
 }
